# LGSTrayBattery

./: .gitignore  LGSTrayBattery.csproj  LGSTrayBattery.sln  MainWindow.xaml  MainWindow.xaml.cs  prepare_project.bat  publish.py  readme.md
LGSTrayBattery/: App.config  App.xaml  App.xaml.cs  BatteryToIcoConverter.cs  CheckTheme.cs  FodyWeavers.xsd  HttpServer.cs  LGSTrayBattery.csproj  LogiDevice.cs  LogiDeviceException.cs  LogiFeatures.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  PollInterval.cs  PowerModel.cs  packages.config
LGSTrayCore/: AppSettings.cs  DeviceType.cs  HttpServer.cs  ILogiDeviceCollection.cs  IServiceExtension.cs  LGSTrayCore.csproj  LogiDevice.cs  LogiDeviceCollection.cs  LogiDeviceManager.cs  PowerSupplyStatus.cs  packages.config
LGSTrayGHUB/: GHUBDeviceManager.cs  GHUBMsg.cs  LGSTrayGHUB.csproj  LogiDeviceGHUB.cs  app.config  packages.config
LGSTrayGUI/: App.config  App.xaml  App.xaml.cs  AppSettings.cs  BatteryToIcoConverter.cs  CheckTheme.cs  DevicePrefixConverter.cs  FodyWeavers.xml  (+12 more)
LGSTrayNative_cpp_src/: .gitignore  CMakeLists.txt  CMakePresets.json  cpp.hint  readme.md
LGSTrayNative_cpp_src/include/: Battery.hpp  Battery1000.hpp  Battery1001.hpp  Battery1004.hpp  HIDDevice.hpp  HIDPPMsg.hpp  LGSTrayHID_common.hpp  LGSTrayHID_lib.hpp  LogiDevice.hpp  MapWrapper.hpp  _hid_io_debug.hpp  hid_io_debug.hpp
LGSTrayNative_cpp_src/src/: Battery1000.cpp  Battery1001.cpp  Battery1004.cpp  HIDDevice.cpp  HIDPPMsg.cpp  LGSTrayHID_common.cpp  LGSTrayHID_lib.cpp  LogiDevice.cpp  MapWrapper.cpp  hid_io_debug.cpp  main.cpp
(+128 files in other folders)
